# regbench

./: .env.example  .gitignore  pyproject.toml
data/: regex_dataset.csv  regex_dataset_processed.csv
logs/: 2024-08-04T16-41-30-07-00_regex-prediction_apytWva7cjXSxdUDHBSXnv.json  2024-08-04T16-41-59-07-00_regex-prediction_DYAe3dHayisp2Ld3wJvecK.json  2024-08-04T16-41-59-07-00_regex-prediction_Razxwpuyk4JMX3sRD4M4qu.json  2024-08-04T16-41-59-07-00_regex-prediction_jcUCHdawJ2MTecAVM5M2DB.json  2024-08-04T16-42-27-07-00_regex-prediction_HPaEDBTbc4CpwQK7ATnq4A.json  2024-08-04T16-42-27-07-00_regex-prediction_UtfuJ9tXKqGzvY9mxYbbPD.json  2024-08-04T16-42-27-07-00_regex-prediction_i6t2924jeqDvwmFSnUhfnd.json  2024-08-04T16-45-24-07-00_regex-prediction_PzQhNnFVfkV3C9QQUHSrBa.json  2024-08-04T16-45-24-07-00_regex-prediction_X2kNPtwgd4JMJQh9yhwQg5.json  2024-08-04T16-45-24-07-00_regex-prediction_iveU5NuksZEtMgTsCqQNWe.json
regbench/: regex_task.py
